test/parser/negative/BitwiseOperations.java
public class BitwiseOperations {
    public BitwiseOperations() {}
  public int m(int x) {
    return ((x & x) | x) ^ x;
  }
}
